--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,52 @@ body{
     border:5px solid rgb(212, 245, 25);
     height: 600px;
 }
+.header-position{
+    position: absolute;
+    z-index: 3;
+}
+.header__flex-container{
+    display: flex;
+    justify-content: space-between;
+
+}
+.logo{
+    position:relative;
+    background-color: beige;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 10px;
+}
+.user__column{
+    position:relative;
+    border:3px solid rgb(241, 168, 31);
+    width: 160px;
+    height: 220px;
+}
+.user__avatar{
+    background-color: rgb(148, 50, 4);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 10px;
+}
+.basket__logo{
+    background-color: aliceblue;
+    background-image: url("/icons/shopping-cart-2.png");
+    border: 1px solid;
+    border-radius: 5px;
+    width: 24px;
+    height: 24px;
+}
+.slider{
+    position: absolute;
+    background: url("images/alltrousers.jpg") no-repeat;
+    width: 1490px;
+    height: 590px;
+    border: 5px solid antiquewhite; 
+    z-index: 1;
+}
 .main{
     border: 5px solid antiquewhite;
     display: flex;
@@ -49,7 +95,7 @@ body{
     justify-content: space-between;
 }
 .calveb-klein{
-    background: url('/images/ck-trousers.jpg') no-repeat;
+    background: url('images/ck-trousers.jpg') no-repeat;
     background-size: cover;
     width: 200px;
     height: 300px;
@@ -60,8 +106,13 @@ body{
     height: 800px;
     margin: 10px;
 }
+.sidebar__links{
+    text-align: center;
+}
 .link{
     color: rgba(255,244,216,1);
+    display: block;
+    margin-top: 10px;
 }
 .footer{
     border: 5px solid rgb(255, 0, 119);
