--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body{
 }
 .basket__logo{
     background-color: aliceblue;
-    background-image: url("/icons/shopping-cart-2.png");
+    background-image: url("icons/shopping-cart-2.png");
     border: 1px solid;
     border-radius: 5px;
     width: 24px;
