--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,7 @@ body{
     height: 600px;
 }
 .header-position{
-    position: absolute;
-    z-index: 3;
+
 }
 .header__flex-container{
     display: flex;
@@ -34,15 +33,17 @@ body{
 
 }
 .logo{
-    position:relative;
     background-color: beige;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     margin: 10px;
+    z-index: 2;
+}
+.user{
+    z-index: 2;
 }
 .user__column{
-    position:relative;
     border:3px solid rgb(241, 168, 31);
     width: 160px;
     height: 220px;
@@ -62,13 +63,18 @@ body{
     width: 24px;
     height: 24px;
 }
-.slider{
+.slider-position{
     position: absolute;
+    border: 5px solid rgb(255, 163, 43); 
+    width: 100%;
+    height: 590px;
+}
+.slider{
     background: url("images/alltrousers.jpg") no-repeat;
-    width: 1490px;
+    width: 100%;
+    min-width: 900px;
     height: 590px;
     border: 5px solid antiquewhite; 
-    z-index: 1;
 }
 .main{
     border: 5px solid antiquewhite;
@@ -78,7 +84,6 @@ body{
 .content{
     border: 5px solid rgb(0, 247, 255);
     width: 1200px;
-    height: 800px;
     margin: 10px;
     display: flex;
     flex-wrap: wrap;
