--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,6 @@ body{
     border:5px solid rgb(212, 245, 25);
     height: 600px;
 }
-.header-position{
-
-}
 .header__flex-container{
     display: flex;
     justify-content: space-between;
@@ -37,11 +34,14 @@ body{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin: 10px;
+    margin: 20px;
     z-index: 2;
 }
 .user{
     z-index: 2;
+    margin: 20px;
+    background-color: rgba(56, 56, 55, 0.6);
+    border-radius: 25px;
 }
 .user__column{
     border:3px solid rgb(241, 168, 31);
@@ -53,15 +53,35 @@ body{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin: 10px;
+    margin: 10px auto 10px auto;
+}
+.user__name{
+    margin: 10px auto 10px auto;
+    text-align: center;
+}
+.user__basket{
+    margin: 40px 0 0 10px;
 }
 .basket__logo{
     background-color: aliceblue;
-    background-image: url("icons/shopping-cart-2.png");
-    border: 1px solid;
-    border-radius: 5px;
-    width: 24px;
-    height: 24px;
+    background-image: url("icons/shopping-cart.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 8px;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    margin: 20px;
+}
+.basket__log:hover{
+    cursor: pointer;
+    
+}
+.basket__price{
+    margin: 0 0 0 10px;
+}
+a{
+    outline: none;
 }
 .slider-position{
     position: absolute;
@@ -71,6 +91,7 @@ body{
 }
 .slider{
     background: url("images/alltrousers.jpg") no-repeat;
+    background-size: cover;
     width: 100%;
     min-width: 900px;
     height: 590px;
@@ -83,14 +104,14 @@ body{
 }
 .content{
     border: 5px solid rgb(0, 247, 255);
-    width: 1200px;
-    margin: 10px;
+    margin: 5px;
     display: flex;
     flex-wrap: wrap;
+    padding: 10px;
 }
 .item{
     padding: 5px;
-    margin: 5px;
+    margin: 10px;
     border: 5px solid rgb(41, 8, 117);
     width: 220px;
     height: 380px;
