--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
     color: rgba(255,244,216,1);
 }
 .header{
-    border:5px solid rgb(212, 245, 25);
+    /* border:5px solid rgb(212, 245, 25); */
     height: 600px;
 }
 .header__flex-container{
@@ -44,7 +44,7 @@ body{
     border-radius: 25px;
 }
 .user__column{
-    border:3px solid rgb(241, 168, 31);
+    /* border:3px solid rgb(241, 168, 31); */
     width: 160px;
     height: 220px;
 }
@@ -72,10 +72,12 @@ body{
     height: 50px;
     padding: 5px;
     margin: 20px;
-}
-.basket__log:hover{
+    transition: ease 0.4s;
     cursor: pointer;
-    
+}
+.basket__logo:hover{
+    background-color: rgba(199, 178, 140,1);
+    transition: ease 0.4s; 
 }
 .basket__price{
     margin: 0 0 0 10px;
@@ -85,7 +87,7 @@ a{
 }
 .slider-position{
     position: absolute;
-    border: 5px solid rgb(255, 163, 43); 
+    /* border: 5px solid rgb(255, 163, 43);  */
     width: 100%;
     height: 590px;
 }
@@ -95,26 +97,35 @@ a{
     width: 100%;
     min-width: 900px;
     height: 590px;
-    border: 5px solid antiquewhite; 
+    /* border: 5px solid antiquewhite;  */
 }
 .main{
-    border: 5px solid antiquewhite;
+    /* border: 5px solid antiquewhite; */
     display: flex;
     justify-content:center;
 }
 .content{
-    border: 5px solid rgb(0, 247, 255);
-    margin: 5px;
+    margin: 5px ;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
+    background-color: rgb(202, 187, 159);
+    border-radius: 8px;
 }
 .item{
-    padding: 5px;
-    margin: 10px;
-    border: 5px solid rgb(41, 8, 117);
-    width: 220px;
+    padding:15px;
+    margin: 10px auto  10px auto;
+    width: 230px;
     height: 380px;
+    background-color: rgba(49, 49, 49, 0.5);
+    border-radius: 12px;
+    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 1);;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.item__content{
+    margin: 5px 5px 5px 5px;
 }
 .item__text{
     display: flex;
@@ -130,9 +141,13 @@ a{
 }
 button{
     border-radius: 20px;
-    background-color: bisque;
+    background-color: rgba(255, 229, 182,0.8);
     padding: 5px;
-
+    transition: ease 0.4s;
+}
+.button:hover{
+    background-color: rgba(255, 229, 182,1);
+    transition: ease 0.4s;
 }
 .img{
     border-radius: 12px;
@@ -140,25 +155,32 @@ button{
     height: 300px;
     cursor: pointer;
     transition: ease 0.4s;
+    margin:auto;
 }
 .img:hover{
     transition: ease 0.4s;
-    transform: scale(2,2) translate(30px, 0);
+    transform: scale(1.5,1.5) translate(30px, 0);
 
 
 }
 .calveb-klein{
     background: url('images/ck-trousers.jpg') no-repeat;
     background-size: cover;
+    
 }
 .sidebar{
-    border: 5px solid rgb(190, 130, 51);
+    /* border: 5px solid rgb(190, 130, 51); */
     width: 300px;
     height: 800px;
     margin: 10px;
 }
 .sidebar__links{
     text-align: center;
+}
+.link{
+    color: rgba(255,244,216,1);
+    text-align: center; 
+    font-size: 16px; 
 }
 .first-level-li{
     background-color: rgba(124, 57, 26,0.5);
@@ -176,33 +198,36 @@ button{
     background-color: rgba(124, 57, 26,1);
     transition: ease 0.2s;
 }
-.first-level-li:hover  .second-level-ul{
+/* .first-level-li:hover  .second-level-ul{
     display: block;
     transition: ease 0.4s;
-}
-.second-level-ul{
+} */
+
+.second-level-li{
     display:  none;
     transition: ease 0.4s;
-    position: absolute;
-    height: 200px;
-    width: 200px;
+    /* position: absolute; */
     background-color: rgba(124, 57, 26,1);
+    
 }
-
+.second-level-li:hover a{
+    display:  block;
+    transition: ease 0.6s;
+    color: rgb(255, 202, 68);
+}
+.first-level-ul:hover .second-level-li {
+    display: block;
+    transition: ease 0.6s;
+}
 .middle-text{
     font-size: 22px;
 }
 .text-center{
     text-align:center
 }
-.link{
-    color: rgba(255,244,216,1);
-    display: block;
-    text-align: center;
-    
-}
+
 .footer{
-    border: 5px solid rgb(255, 0, 119);
+    /* border: 5px solid rgb(255, 0, 119); */
 }
 .footer__content{
     text-align: center;
