--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,9 @@ body{
 }
 .user__column{
     /* border:3px solid rgb(241, 168, 31); */
-    width: 160px;
-    height: 220px;
+    width: 400px;
+    height: 50px;
+    position: relative;
 }
 .user__avatar{
     background-color: rgb(148, 50, 4);
@@ -54,13 +55,19 @@ body{
     height: 50px;
     border-radius: 50%;
     margin: 10px auto 10px auto;
+    position: absolute;
+    left: 20px;
+    top: -10px;
 }
 .user__name{
-    margin: 10px auto 10px auto;
-    text-align: center;
+    position: absolute;
+    left: 90px;
+    top: 15px
 }
 .user__basket{
-    margin: 40px 0 0 10px;
+    position: absolute;
+    left: 200px;
+    top: 10px;
 }
 .basket__logo{
     background-color: rgba(255, 229, 182,1);
@@ -68,19 +75,20 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 8px;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     padding: 5px;
-    margin: 20px;
     transition: ease 0.4s;
     cursor: pointer;
+
 }
 .basket__logo:hover{
     background-color: rgba(199, 178, 140,1);
     transition: ease 0.4s; 
 }
 .basket__price{
-    margin: 0 0 0 10px;
+    position: absolute;
+    left: 40px
 }
 a{
     outline: none;
@@ -243,9 +251,9 @@ button{
     text-align:center
 }
 
-.footer{
-    /* border: 5px solid rgb(255, 0, 119); */
-}
+/* .footer{
+     border: 5px solid rgb(255, 0, 119); 
+} */
 .footer__content{
     text-align: center;
 }
