--- a/styles.css
+++ b/styles.css
@@ -114,26 +114,48 @@ a{
 }
 .content{
     margin: 5px ;
-    padding: 10px;
-    display: flex;
+    padding: 20px 20px  20px 50px;
+    /* display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start; */
     background-color: rgb(202, 187, 159);
     border-radius: 8px;
+    width: calc(100% - 264px - 0.01px);
 }
 .item{
-    padding:15px;
-    margin: 10px auto  10px auto;
+     /* padding:15px;
+     margin: 10px auto  10px auto; 
+     margin: 20px auto  20px 20px;
+    margin: 10px 20px 10px 20px;
+    flex: 0 1;
     width: 300px;
+     max-width: 300px; 
     height: 380px;
     background-color: rgba(49, 49, 49, 0.5);
     border-radius: 12px;
-    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 1);;
+    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 1);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;  */
+/* max-width: 300px; */
+margin: 20px;
+text-align: center;
+font-family: arial; 
+background-color: rgba(49, 49, 49, 0.5);
+border-radius: 12px;
+box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 1);
+display: inline-block;
+width: calc(100% / 4 - 4px - -4px / 4 - 0.01px);
+height: auto;
 }
+
+/* .item:nth-last-child(-n+1){
+    margin: 10px 20px 10px 20px;
+} */
+
 .item__content{
     margin: 5px 5px 5px 5px;
+    position: relative;
 }
 .item__text{
     display: flex;
@@ -142,7 +164,10 @@ a{
     padding: 5px;
 }
 .item__description{
-    text-align: justify;
+    /* text-align: justify; */
+    max-height: 100px;
+    max-width: 200px;
+    display: block;
 }
 .item__price{
     margin-top: 10px;
@@ -159,21 +184,26 @@ button{
 }
 .img{
     border-radius: 12px;
-    width: 200px;
-    height: 300px;
+    width: 90%;
+    height: 260px;
     cursor: pointer;
     transition: ease 0.4s;
     margin:auto;
 }
 .img:hover{
     transition: ease 0.4s;
-    transform: scale(1.4,1.4) translate(0, 20px);
+    transform: scale(1.6,1.3) translate(0, 20px);
 
 
 }
-.calveb-klein{
+.calven-klein{
     background: url('images/ck-trousers.jpg') no-repeat;
     background-size: cover;
+    /* width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0; */
     
 }
 .sidebar{
