--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,16 @@ body{
 }
 .header{
     /* border:5px solid rgb(212, 245, 25); */
-    height: 600px;
+    height: 400px;
+    /* width: 100%; */
+}
+.header__content{
+    /* background-color: rgb(202, 187, 159); */
 }
 .header__flex-container{
     display: flex;
     justify-content: space-between;
+    background-color: rgb(202, 187, 159);
 
 }
 .logo{
@@ -35,10 +40,10 @@ body{
     height: 50px;
     border-radius: 50%;
     margin: 20px;
-    z-index: 2;
+    /* z-index: 2; */
 }
 .user{
-    z-index: 2;
+    /* z-index: 2; */
     margin: 20px;
     background-color: rgba(56, 56, 55, 0.6);
     border-radius: 25px;
@@ -94,17 +99,25 @@ a{
     outline: none;
 }
 .slider-position{
-    position: absolute;
+    /* position: absolute;
+    left: 400px; */
     /* border: 5px solid rgb(255, 163, 43);  */
-    width: 100%;
-    height: 590px;
+    /* width: 100%; */
+    /* width: 300px; */
+    /* min-height: 300px; */
+    display: flex;
+    justify-content: center;
+    flex: 1 1 400px;
 }
 .slider{
+    margin:10px 0 20px 0 ;
     background: url("images/alltrousers.jpg") no-repeat;
     background-size: cover;
-    width: 100%;
-    min-width: 900px;
-    height: 590px;
+    /* width: 100%; */
+    /* min-width: 900px; */
+    min-width: 640px;
+    /* height: 590px; */
+    height: 300px;
     /* border: 5px solid antiquewhite;  */
 }
 .main{
@@ -114,7 +127,7 @@ a{
 }
 .content{
     margin: 5px ;
-    padding: 20px 20px  20px 50px;
+    padding: 20px 20px  20px 20px;
     /* display: flex;
     flex-wrap: wrap;
     justify-content: flex-start; */
@@ -138,15 +151,18 @@ a{
     align-items: center;
     justify-content: center;  */
 /* max-width: 300px; */
-margin: 20px;
+margin: 10px 0 10px 12px;
+padding: 10px;
 text-align: center;
 font-family: arial; 
 background-color: rgba(49, 49, 49, 0.5);
 border-radius: 12px;
 box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 1);
 display: inline-block;
-width: calc(100% / 4 - 4px - -4px / 4 - 0.01px);
-height: auto;
+/* width: calc(95% / 4 - 4px - -4px / 4 - 0.01px); */
+width:31%;
+min-height: 400px;
+vertical-align: top;
 }
 
 /* .item:nth-last-child(-n+1){
@@ -157,20 +173,39 @@ height: auto;
     margin: 5px 5px 5px 5px;
     position: relative;
 }
+.item__container{
+    vertical-align:bottom;
+    display: inline-block;
+   
+}
+.item__header{
+    display: inline-block;
+}
 .item__text{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 5px;
 }
+.decription__container{
+    vertical-align:bottom;
+    display: inline-block;
+}
 .item__description{
-    /* text-align: justify; */
-    max-height: 100px;
-    max-width: 200px;
-    display: block;
+    vertical-align:bottom;
+    text-align: center;
+    /* max-height: 100px; */
+    /* max-width: 310px; */
+    padding: 5px 10px 5px 10px;
+    display: inline-block;
+    
 }
 .item__price{
     margin-top: 10px;
+}
+.item__button{
+    display: inline-block;
+    vertical-align:bottom;
 }
 button{
     border-radius: 20px;
@@ -184,7 +219,7 @@ button{
 }
 .img{
     border-radius: 12px;
-    width: 90%;
+    /* width: 90%; */
     height: 260px;
     cursor: pointer;
     transition: ease 0.4s;
@@ -208,7 +243,9 @@ button{
 }
 .sidebar{
     /* border: 5px solid rgb(190, 130, 51); */
-    width: 400px;
+    /* background:rgb(202, 187, 159); */
+    border-radius: 5px;
+    max-width: 300px;
     height: 800px;
     margin: 10px;
 }
@@ -216,12 +253,13 @@ button{
     text-align: center;
 }
 .link{
-    color: rgba(255,244,216,1);
+    color: rgba(0, 0, 0, 1);
     text-align: center; 
     font-size: 16px; 
 }
 .first-level-li{
-    background-color: rgba(124, 57, 26,0.5);
+    /* background-color: rgba(0, 0, 0, 1); */
+    background-color: rgba(255,244,216,0.7);
     border-radius: 5px;
     height: 30px;
     padding: 20px;
@@ -233,7 +271,7 @@ button{
     
 }
 .first-level-li:hover{
-    background-color: rgba(124, 57, 26,1);
+    background-color: rgba(255,244,216,0.7);
     transition: ease 0.2s;
 }
 /* .first-level-li:hover  .second-level-ul{
