--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body{
 }
 .header{
     /* border:5px solid rgb(212, 245, 25); */
-    height: 400px;
+    height: 440px;
     /* width: 100%; */
 }
 .header__content{
@@ -50,8 +50,8 @@ body{
 }
 .user__column{
     /* border:3px solid rgb(241, 168, 31); */
-    width: 400px;
-    height: 50px;
+    width: 520px;
+    height: 70px;
     position: relative;
 }
 .user__avatar{
@@ -62,14 +62,19 @@ body{
     margin: 10px auto 10px auto;
     position: absolute;
     left: 20px;
-    top: -10px;
+    top: 0;
 }
 .user__name{
     position: absolute;
     left: 90px;
-    top: 15px
+    top: 25px
 }
 .user__basket{
+    position: absolute;
+    left: 210px;
+    top: 15px;
+}
+.user-login{
     position: absolute;
     left: 200px;
     top: 10px;
@@ -135,6 +140,9 @@ a{
     border-radius: 8px;
     width: calc(100% - 264px - 0.01px);
 }
+.items{
+    width: 100%;
+}
 .item{
      /* padding:15px;
      margin: 10px auto  10px auto; 
@@ -152,7 +160,7 @@ a{
     justify-content: center;  */
 /* max-width: 300px; */
 margin: 10px 0 10px 12px;
-padding: 10px;
+padding: 10px 20px 10px 20px;
 text-align: center;
 font-family: arial; 
 background-color: rgba(49, 49, 49, 0.5);
@@ -175,7 +183,7 @@ vertical-align: top;
 }
 .item__container{
     vertical-align:bottom;
-    display: inline-block;
+    /* display: inline-block; */
    
 }
 .item__header{
@@ -194,14 +202,15 @@ vertical-align: top;
 .item__description{
     vertical-align:bottom;
     text-align: center;
-    /* max-height: 100px; */
+    height: 70px;
     /* max-width: 310px; */
+    margin: 5px 0 0 0 ;
     padding: 5px 10px 5px 10px;
     display: inline-block;
     
 }
 .item__price{
-    margin-top: 10px;
+    padding: 10px;
 }
 .item__button{
     display: inline-block;
@@ -227,7 +236,7 @@ button{
 }
 .img:hover{
     transition: ease 0.4s;
-    transform: scale(1.6,1.3) translate(0, 20px);
+    transform: scale(1.14,1.4) translate(0, 20px);
 
 
 }
