--- a/styles.css
+++ b/styles.css
@@ -48,36 +48,54 @@ body{
     background-color: rgba(56, 56, 55, 0.6);
     border-radius: 25px;
 }
-.user__column{
+.user__row{
     /* border:3px solid rgb(241, 168, 31); */
-    width: 520px;
+    /* width: 520px; */
     height: 70px;
     position: relative;
+    display: flex;
+    align-items: center;
 }
-.user__avatar{
+.user__column{
+    flex: 1 1 300px;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 10px 0 10px;
+}
+.user__avatar {
     background-color: rgb(148, 50, 4);
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin: 10px auto 10px auto;
-    position: absolute;
+    margin: 10px 10px 10px 10px;
+    /* position: absolute;
     left: 20px;
-    top: 0;
+    top: 0; */
 }
 .user__name{
-    position: absolute;
+    /* position: absolute;
     left: 90px;
-    top: 25px
+    top: 25px */
 }
 .user__basket{
-    position: absolute;
+    /* position: absolute;
     left: 210px;
-    top: 15px;
+    top: 15px; */
+    /* position: relative; */
 }
 .user-login{
-    position: absolute;
+    /* position: absolute;
     left: 200px;
-    top: 10px;
+    top: 10px; */
+    background-color: rgba(255, 229, 182,0.8);
+    border-radius: 8px;
+    width: 40px;
+    height: 20px;
+    margin: 0 10px 0 10px;
+    line-height: 20px;
+
+
 }
 .basket__logo{
     background-color: rgba(255, 229, 182,1);
@@ -97,8 +115,8 @@ body{
     transition: ease 0.4s; 
 }
 .basket__price{
-    position: absolute;
-    left: 50px
+    /* position: absolute;
+    left: 50px */
 }
 .basket__count{
     position: absolute;
@@ -110,8 +128,9 @@ body{
     height: 15px;
     color: black;
     border-radius: 16px;
-    left:20px;
-    top:-10px;
+    /* padding: 2px; */
+    left:160px;
+    top:10px;
 }
 a{
     outline: none;
@@ -144,7 +163,7 @@ a{
     justify-content:center;
 }
 .content{
-    margin: 5px ;
+    /* margin: 5px ; */
     padding: 20px 20px  20px 20px;
     /* display: flex;
     flex-wrap: wrap;
@@ -229,7 +248,7 @@ vertical-align: top;
     display: inline-block;
     vertical-align:bottom;
 }
-button{
+.button{
     border-radius: 20px;
     background-color: rgba(255, 229, 182,0.8);
     padding: 5px;
@@ -361,7 +380,7 @@ button{
 }
 @media (max-width: 765px){
     .content{
-        width:99%;
+        width:100%;
         padding: 40px 70px 20px 70px;
     }
     .item{
@@ -369,5 +388,30 @@ button{
     }
     .sidebar{
         display: none;
+    }
+}
+
+@media (max-width: 650px){
+    .slider{
+        min-width: 300px;
+    }
+    .user__column{
+        /* width: 90%; */
+    }
+    .logo{
+        display: none;
+    }
+    .user{
+        margin: 10px auto 10px auto;
+        /* width: 90%; */
+    }
+    .user-login{
+        left: 160px;
+    }
+    .user__basket{
+        left: 140px;
+    }
+    .content{
+        padding: 30px 10px 20px 5px;
     }
 }
